--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,19 @@ html
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = action_cable_meta_tag
   body
+
+    - if user_signed_in?
+      = link_to('Logout', destroy_user_session_path, method: :delete)
+    - else
+      p
+        = link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path
+      p
+        = link_to('Login', new_user_session_path)
+      p
+        = link_to('Register', new_user_registration_path, id: "logout")
+
     p.notice
       = notice
     p.alert
