--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,4 +1,13 @@
 
 div#users
   - @users.each do |user|
-    p= "#{user.email}, online=#{current_user.id == user.id ? 'true' : user.is_online?}"
+    p
+      = user.email
+      span
+        input(type="checkbox" id=(user.id) checked=(current_user.id == user.id ? true : user.is_online?))
+      span#chat-buttons
+        = form_tag rooms_path do
+          = hidden_field_tag :user_id, user.id
+          span
+            = submit_tag 'начать чат', class: "btn btn-danger"
+
