--- a/app/views/global_rooms/show.html.slim
+++ b/app/views/global_rooms/show.html.slim
@@ -1,30 +1,30 @@
+
 div(style="text-align:center")
   p
-    b= @room.title
-
+    b= @g_room.title
+p= link_to "edit", edit_global_room_path(@g_room) if current_user.id == @g_room.owner_id
 div.row
   div.col-lg-6.col-md-6
-    div(id="room" data-chat-id="#{@room.id}")
-    div(id="room_#{@room.id}" )
-
-      p messages
+    div(id="room" data-chat-id="#{@g_room.id}")
+    div(id="room_#{@g_room.id}" )
+      p
+        b messages
       - @messages.each do |message|
         p= "#{message.user.email}| #{(message.created_at).strftime('%Y-%m-%d %H:%M')} |#{message.context}"
         = link_to "file", "/uploads/#{message.file_name}" if message.file_name
-    = form_tag messages_path, multipart: true, id:"form_for_message" do
+    = form_tag messages_path, id:"form_for_message" do
       p= file_field_tag 'upload[file]'
       = text_field_tag :context
-      = hidden_field_tag :room_id, @room.id
+      = hidden_field_tag :room_id, @g_room.id
       = hidden_field_tag :user_id, current_user.id
       span
         = submit_tag 'send', class: "btn btn-danger", id: "send_message"
 
+
   div.col-lg-6.col-md-6
-    p users
-    - @room.users.each do |user|
+    p
+      b users
+    - @g_room.users.each do |user|
       p= user.email
-
-
-
 
 
