--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,14 +10,18 @@ html
   body
 
     - if user_signed_in?
-      = link_to('Logout', destroy_user_session_path, method: :delete)
+      = link_to "выйти", destroy_user_session_path, method: :delete
+      span ,
+      = link_to "домой", "/"
+      span ,
+      = link_to "создать груповой чат", new_global_room_path, class: "btn btn-info"
     - else
       p
-        = link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path
+        = link_to "Facebook логин", user_facebook_omniauth_authorize_path
       p
-        = link_to('Login', new_user_session_path)
+        = link_to('Логин', new_user_session_path)
       p
-        = link_to('Register', new_user_registration_path, id: "logout")
+        = link_to('Регистрация', new_user_registration_path, id: "logout")
 
     p.notice
       = notice
