--- a/app/assets/stylesheets/room.scss
+++ b/app/assets/stylesheets/room.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the room controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#rooms {
+  border-right: 2px solid red;
+}
