--- a/app/views/welcome/_user.html.slim
+++ b/app/views/welcome/_user.html.slim
@@ -14,6 +14,6 @@ div#users
         = form_tag rooms_path do
           = hidden_field_tag :user_id, user.id
           span
-            = submit_tag 'начать чат', class: "btn btn-danger"
+            = submit_tag 'начать чат', class: "btn btn-primary"
 
 
