--- a/app/views/global_rooms/show.html.slim
+++ b/app/views/global_rooms/show.html.slim
@@ -10,8 +10,12 @@ div.row
       p
         b messages
       - @messages.each do |message|
-        p= "#{message.user.email}| #{(message.created_at).strftime('%Y-%m-%d %H:%M')} -> #{message.context}"
-        = link_to "file", "/uploads/#{message.file_name}" if message.file_name
+        - if message.context.length > 0
+          p= "#{message.user.email}| #{(message.created_at).strftime('%Y-%m-%d %H:%M')} -> #{message.context}"
+        - if message.file_name
+          p
+            = "#{message.user.email}| #{(message.created_at).strftime('%Y-%m-%d %H:%M')} -> "
+            = link_to "file", "/uploads/#{message.file_name}" if message.file_name
     = form_tag messages_path, id:"form_for_message" do
       p= file_field_tag 'upload[file]'
       = text_field_tag :context
