--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -14,7 +14,7 @@ div.row
         - if message.file_name
           p
             = "#{message.user.email}| #{(message.created_at).strftime('%Y-%m-%d %H:%M')} -> "
-            = link_to "file", "/uploads/#{message.file_name}" if message.file_name
+            = link_to "file", "/uploads/#{message.file_name}", download:"#{request.host}/uploads/#{message.file_name}" if message.file_name
     = form_tag messages_path, multipart: true, id:"form_for_message" do
       p= file_field_tag 'upload[file]'
       = text_field_tag :context
